--- a/app/globals.css
+++ b/app/globals.css
@@ -3,3 +3,39 @@
 body {overflow:hidden;
   font-family: Arial, Helvetica, sans-serif;
 }
+
+.wrapper {
+  height: 100%;
+  width: 100%;
+}
+
+.move {
+  position: absolute;
+  width: 167px;
+  height: 100px;
+  filter: invert(100%);
+  animation: horizontal 9s linear -35.8s infinite forwards, vertical 10s linear -0.6s infinite forwards;
+}
+
+@keyframes horizontal {
+  0% {
+    left: 0%;
+  }
+  50% {
+    left: calc(100% - 167px);
+  }
+  100% {
+    left: 0%;
+  }
+}
+@keyframes vertical {
+  0% {
+    top: 0%;
+  }
+  50% {
+    top: calc(100% - 100px);
+  }
+  100% {
+    top: 0%;
+  }
+} 
